uploads now work

--- a/public/index.html
+++ b/public/index.html
@@ -71,9 +71,17 @@
             </table>
           </script>
         </div>
+        <div class="span12">
+          <form action="/import" enctype="multipart/form-data" method="post">
+            <input type="file" name="upload" multiple="multiple"><br>
+            <input type="submit" value="Upload">
+          </form>
+        </div>
       </div>
 
       <hr>
+
+
 
       <div class="footer">
         <p>&copy; Company 2013</p>
