--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,11 @@
 
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
+          <li class="active"><a href="/#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <h3 class="muted">Bank Parser</h3>
+        <h3 class="muted"><a href="/#">Bank Parser</a></h3>
       </div>
 
       <hr>
